<resources>
    <string name="app_name">Take Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail_name">Name</string>
    <string name="detail_species">Species</string>
    <string name="detail_gender">Gender</string>
    <string name="detail_origin">Origin</string>
    <string name="detail_location">Location</string>
    <string name="search_label">Search...</string>
    <string name="home_status_text">You have no favorites</string>
</resources>